--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,7 @@ flutter:
     - assets/images/cart_screen_icons/
     - assets/applepay.json
     - assets/gpay.json
-    - config.env
+    - assets/config.env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
